# sharks-look-much-scarier-than-they-actually-are

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md
.cargo/: config.toml
.claude/: CLAUDE.md
examples/: cube.rs  gallery.rs  grid.rs  terrain.rs  triangle.rs
examples/terrain/: erosion.rs  heightmap.rs
src/: app.rs  application.rs  camera.rs  input.rs  lib.rs  main.rs  time.rs  ui.rs
src/renderer/: font.rs  mesh.rs  mod.rs  overlay.rs  overlay.wgsl  shader.wgsl  vertex.rs
web/: index.html
xtask/: Cargo.toml
xtask/src/: main.rs
